tests/invalid/dict_subscript_aug_key_type_mismatch/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    d["1"] += 2


if __name__ == "__main__":
    run_case()
